--- a/index.css
+++ b/index.css
@@ -102,12 +102,11 @@
   font-family: var(--font-inter);
 }
 .download-cv {
-  position: relative;
-  font-weight: 500;
-  z-index: unset;
   color:whitesmoke;
   text-decoration: none;
+  text-underline-position: none;
 }
+
 }
 .frame {
   border-radius: 50px;
