--- a/index.css
+++ b/index.css
@@ -126,7 +126,16 @@
   display: flex;
   align-items: flex-start;
   max-width: 100%;
+  text-decoration: none;
 }
+
+.frame-container,
+.frame a,
+.download-cv {
+  text-decoration: none;
+}
+
+
 .frame-container {
   width: 402px;
   flex-direction: row;
